add: add navbar, approuter

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -12,4 +12,7 @@
 
   --font-l: var(--font-size-l)
     var(var(--font-line-l) var(var(--font-family-main)));
+
+  // Размеры
+  --navbar-height: 50px;
 }
