--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,10 @@
 .app.dark {
   --bg-color: #050552;
+  --inverted-bg-color: #e8e8ea;
+
   --primary-color: #187318;
   --secondary-color: #04ff04;
+
+  --inverted-primary-color: #041c65;
+  --inverted-secondary-color: #0449e0;
 }
