--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,5 +1,10 @@
 .app.light {
   --bg-color: #e8e8ea;
+  --inverted-bg-color: #050552;
+
   --primary-color: #041c65;
   --secondary-color: #0449e0;
+
+  --inverted-primary-color: #187318;
+  --inverted-secondary-color: #04ff04;
 }
