--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,22 +1,20 @@
 :root {
-  --font-family-main: Consolas, "Times New Roman", Serif;
+    --font-family-main: consolas, "Times New Roman", serif;
+    --font-size-m: 16px;
+    --font-size-l: 24px;
+    --font-line-m: 24px;
+    --font-line-l: 32px;
+    --font-m:
+        var(--font-size-m)
+        var(var(--font-line-m) var(var(--font-family-main)));
+    --font-l:
+        var(--font-size-l)
+        var(var(--font-line-l) var(var(--font-family-main)));
 
-  --font-size-m: 16px;
-  --font-size-l: 24px;
+    // Размеры navbar
+    --navbar-height: 50px;
 
-  --font-line-m: 24px;
-  --font-line-l: 32px;
-
-  --font-m: var(--font-size-m)
-    var(var(--font-line-m) var(var(--font-family-main)));
-
-  --font-l: var(--font-size-l)
-    var(var(--font-line-l) var(var(--font-family-main)));
-
-  // Размеры navbar
-  --navbar-height: 50px;
-
-  // Размеры sidebar
-  --sidebar-width: 300px;
-  --sidebar-width-collapsed: 80px
+    // Размеры sidebar
+    --sidebar-width: 300px;
+    --sidebar-width-collapsed: 80px;
 }
